[gd_scene load_steps=54 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/PlayerHitbox.gd" type="Script" id=3]
[ext_resource path="res://Utility/Hurtbox.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.23578, 0.861568 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rotation_pivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotation_pivot:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("rotation_pivot/HitBox:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -1.90735e-06 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "attack_d"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotation_pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotation_pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rotation_pivot/HitBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -1.90735e-06 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "attack_l"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotation_pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_r"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotation_pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotation_pivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "attack_u"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotation_pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotation_pivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "idle_d"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle_l"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle_r"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle_u"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=43]
resource_name = "roll_d"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 55, 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Roll" ],
"method": "anim_finished"
} ]
}

[sub_resource type="Animation" id=42]
resource_name = "roll_l"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Roll" ],
"method": "anim_finished"
} ]
}

[sub_resource type="Animation" id=40]
resource_name = "roll_r"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Roll" ],
"method": "anim_finished"
} ]
}

[sub_resource type="Animation" id=41]
resource_name = "roll_u"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Roll" ],
"method": "anim_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_d"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_l"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk_r"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_u"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.00001
height = 3.99998

[sub_resource type="CircleShape2D" id=9]
radius = 10.5835

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "attack_d"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "attack_r"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "attack_u"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "attack_l"

[sub_resource type="AnimationNodeBlendSpace2D" id=60]
blend_point_0/node = SubResource( 56 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 57 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 58 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 59 )
blend_point_3/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "idle_d"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "idle_u"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "idle_r"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "idle_l"

[sub_resource type="AnimationNodeBlendSpace2D" id=50]
blend_point_0/node = SubResource( 46 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 47 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 48 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 49 )
blend_point_3/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "roll_d"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "roll_u"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "roll_r"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "roll_l"

[sub_resource type="AnimationNodeBlendSpace2D" id=61]
blend_point_0/node = SubResource( 62 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 63 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 64 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 65 )
blend_point_3/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "walk_d"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "walk_u"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "walk_r"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "walk_l"

[sub_resource type="AnimationNodeBlendSpace2D" id=55]
blend_point_0/node = SubResource( 51 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 52 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 53 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 54 )
blend_point_3/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachineTransition" id=72]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachine" id=44]
states/Attack/node = SubResource( 60 )
states/Attack/position = Vector2( 151, 192.333 )
states/Idle/node = SubResource( 50 )
states/Idle/position = Vector2( 303.445, -5.93827 )
states/Roll/node = SubResource( 61 )
states/Roll/position = Vector2( 583, 138.556 )
states/Walk/node = SubResource( 55 )
states/Walk/position = Vector2( 328.333, 156.63 )
transitions = [ "Idle", "Attack", SubResource( 66 ), "Attack", "Idle", SubResource( 67 ), "Idle", "Walk", SubResource( 70 ), "Walk", "Idle", SubResource( 71 ), "Roll", "Idle", SubResource( 72 ), "Idle", "Roll", SubResource( 73 ), "Walk", "Attack", SubResource( 74 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, -106.162 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[sub_resource type="CapsuleShape2D" id=75]
radius = 4.0
height = 12.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.919547, 1 )
texture = ExtResource( 2 )
hframes = 60
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/attack_d = SubResource( 10 )
anims/attack_l = SubResource( 12 )
anims/attack_r = SubResource( 7 )
anims/attack_u = SubResource( 11 )
anims/idle_d = SubResource( 17 )
anims/idle_l = SubResource( 18 )
anims/idle_r = SubResource( 13 )
anims/idle_u = SubResource( 16 )
anims/roll_d = SubResource( 43 )
anims/roll_l = SubResource( 42 )
anims/roll_r = SubResource( 40 )
anims/roll_u = SubResource( 41 )
anims/walk_d = SubResource( 6 )
anims/walk_l = SubResource( 5 )
anims/walk_r = SubResource( 2 )
anims/walk_u = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 10 )
rotation = 1.57079
shape = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="rotation_pivot" type="Node2D" parent="."]
rotation = 4.71239

[node name="HitBox" type="Area2D" parent="rotation_pivot"]
position = Vector2( 17, -1.90735e-06 )
collision_mask = 6
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotation_pivot/HitBox"]
rotation = 1.5708
scale = Vector2( 1.23578, 0.861568 )
shape = SubResource( 9 )
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 44 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 45 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( -0.00404155, 0.00212765 )
parameters/Roll/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( -0.431293, 0.339431 )

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1, 0 )
shape = SubResource( 75 )

[node name="InvicibileTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InvicibileTimer" to="." method="_on_InvicibileTimer_timeout"]
